# openBliSSART

./: .gitignore  AUTHORS  BliSSART.sln  CMakeLists.txt  COPYING  DEPENDS  Dockerfile  INSTALL  Makefile.am  Makefile.sub_core  NEWS  README  bootstrap.sh  cleanup.sh  config.h  configure.ac  index.html  openBliSSART.pro  openBliSSART.sln  openBliSSARTconfig.h.in  openBlis
src/: CMakeLists.txt  Makefile.am
src/LibAudio/: .cproject  .project  AudioData.cpp  CMakeLists.bkup  CMakeLists.txt  LibAudio.vcproj  Makefile.am  MelFilter.cpp  Sound.cpp  WaveEncoder.cpp  audio.cpp  libAudio.lai  wave.h
src/LibFeature/: .cproject  .project  CMakeLists.txt  LibFeature.pro  LibFeature.vcproj  Makefile.am  mfcc.cpp  misc.cpp  peak.cpp  sub_LibFeature.pro
src/LibFramework/: .cproject  .project  AmplitudeMatrixTransforms.cpp  AnovaFeatureSelector.cpp  AudioObject.cpp  BasicApplication.cpp  BasicTask.cpp  CMakeLists.txt  ClassificationObject.cpp  ClassificationTask.cpp  CleanupTask.cpp  CorrelationFeatureSelector.cpp  CrossValidator.cpp  DataDescriptor.cpp  DataSet.cpp  DatabaseEntity.cpp  DatabaseSubsystem.cpp  FTTask.cpp  Feature.cpp  FeatureDescriptor.cpp  FeatureExtractionTask.cpp  FeatureExtractor.cpp  FeatureSelector.cpp  FeatureSet.cpp  GnuplotWriter.cpp  HTKWriter.cpp  Label.cpp  LibFramework.pro  LibFramework.vcproj  Makefile.Debug  Makefile.Release  Makefile.am  MatrixTransform.cpp  MelFilterTransform.cpp  NMDTask.cpp  NMFTask.cpp  PowerTransform.cpp  Process.cpp  ProgressInterface.cpp  QueuedTaskManager.cpp  (+14 more)
src/LibFramework/libsvm/: svm-toy.cpp  svm-toy.pro  svm.cpp  svm_org.cpp  svm_test
src/LibICA/: .cproject  .project  CMakeLists.txt  FastICA.cpp  LibICA.vcproj  Makefile.am  PCA.cpp  sub_LibICA.pro
src/LibLinAlg/: .cproject  .project  CMakeLists.bkup  CMakeLists.txt  ColVector.cpp  GPUMatrix.cpp  GPUMatrixKernels.cu  GPUUtil.cpp  LibLinAlg.pro  LibLinAlg.vcproj  Makefile.am  Matrix.cpp  RowVector.cpp  Vector.cpp  compile_commands.json  sub_LibLinAlg.pro  sub_LibLinAlg1.pro
src/LibNMF/: .cproject  .project  CMakeLists.txt  Deconvolver.cpp  DeconvolverKernels.cu  Factorizer.cpp  LibNMF.pro  LibNMF.vcproj  Makefile.am  libNMF.lai  randomGenerator.cpp
src/Testsuite/: .cproject  .project  BinaryReaderWriterTest.cpp  BinaryReaderWriterTest.h  CMakeLists.txt  CNMFTest.cpp  CNMFTest.h  DatabaseSubsystemTest.cpp  DatabaseSubsystemTest.h  FeatureExtractionTest.cpp  FeatureExtractionTest.h  FeatureSelectionTest.cpp  FeatureSelectionTest.h  GPUMatrixTest.cpp  GPUMatrixTest.h  HTKWriterTest.cpp  HTKWriterTest.h  ICATest.cpp  ICATest.h  MFCCTest.cpp  MFCCTest.h  MTrTest.cpp  MTrTest.h  Makefile.am  MatrixTest.cpp  MatrixTest.h  MelFilterTest.cpp  MelFilterTest.h  MinHeapTest.cpp  MinHeapTest.h  NMDConvTest.cpp  NMDConvTest.h  NMDTest.cpp  NMDTest.h  NMFFactorizerTest.cpp  NMFFactorizerTest.h  NMFTest.cpp  NMFTest.h  PCATest.cpp  PCATest.h  (+20 more)
src/benchmark/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  Makefile.am  NMDBenchmark.cpp  NMDBenchmark.h  NMFBenchmark.cpp  NMFBenchmark.h  benchmark.vcproj  main.cpp
src/browser/: .cproject  .project  BrowserController.cpp  BrowserController.h  BrowserForm.ui  BrowserMainWindow.cpp  BrowserMainWindow.h  CMakeLists.txt  ClassificationObjectItem.cpp  ClassificationObjectItem.h  CreateProcessDialog.cpp  CreateProcessDialog.h  CreateProcessDialog.ui  DataDescriptorItem.cpp  DataDescriptorItem.h  EditWidget.cpp  EditWidget.h  EditWidgetClassificationObject.cpp  EditWidgetClassificationObject.h  EditWidgetClassificationObject.ui  EditWidgetLabel.cpp  EditWidgetLabel.h  EditWidgetLabel.ui  EditWidgetResponse.cpp  EditWidgetResponse.h  EditWidgetResponse.ui  EntityItem.cpp  EntityItem.h  ExportObjectsDlg.cpp  ExportObjectsDlg.h  FeatureExtractionDialog.cpp  FeatureExtractionDialog.h  FeatureExtractionDialog.ui  FeatureItem.cpp  FeatureItem.h  FilesSelectionWidget.cpp  FilesSelectionWidget.h  FilesSelectionWidget.ui  LabelItem.cpp  LabelItem.h  (+28 more)
src/build-LibFramework-Desktop-Release/: Makefile.Debug  Makefile.Release
src/cleanup/: .cproject  .project  CMakeLists.txt  Makefile.am  cleanup.vcproj  main.cpp
src/cvtool/: .cproject  .project  CMakeLists.txt  Makefile.am  cvtool.vcproj  main.cpp
src/etc/: browser.properties
src/export/: .cproject  .project  CMakeLists.txt  Makefile.am  export.vcproj  main.cpp
src/exportaudio/: CMakeLists.txt  Makefile.am  exportaudio.vcproj  main.cpp
src/fextool/: .cproject  .project  CMakeLists.txt  Makefile.am  fextool.vcproj  main.cpp
src/icatool/: .cproject  .project  ARFFExporter.cpp  ARFFExporter.h  AbstractExporter.h  AbstractSeparator.cpp  AbstractSeparator.h  CMakeLists.txt  Makefile.am  SampleSeparator.cpp  SampleSeparator.h  WaveExporter.cpp  WaveExporter.h  icatool.vcproj  main.cpp
src/include/: Makefile.am  baseName.h  common.h  types.h
src/include/blissart/: AmplitudeMatrixTransforms.h  AnovaFeatureSelector.h  AudioObject.h  BasicApplication.h  BasicTask.h  BasicTaskNotification.h  BinaryReader.h  BinaryWriter.h  ClassificationObject.h  ClassificationTask.h  CleanupTask.h  CorrelationFeatureSelector.h  CrossValidator.h  DataDescriptor.h  DataSet.h  DatabaseEntity.h  DatabaseSubsystem.h  FTTask.h  Feature.h  FeatureDescriptor.h  FeatureExtractionTask.h  FeatureExtractor.h  FeatureSelector.h  FeatureSet.h  GnuplotWriter.h  HTKWriter.h  Label.h  MatrixTransform.h  MinHeap.h  NMDTask.h  NMFTask.h  Process.h  ProgressInterface.h  ProgressObserver.h  ProgressObserverAdapter.h  QueuedTaskManager.h  Response.h  SVMModel.h  SeparationTask.h  StorageSubsystem.h  (+5 more)
src/include/blissart/audio/: AudioData.h  MelFilter.h  Sound.h  WaveEncoder.h  audio.h
src/include/blissart/feature/: mfcc.h  misc.h  peak.h
src/include/blissart/ica/: FastICA.h  PCA.h
src/include/libsvm/: svm.h
src/labeller/: .cproject  .project  Makefile.am  labeller.vcproj  main.cpp
src/nmdtool/: Makefile.am  NMDGainsTask.cpp  NMDGainsTask.h  main.cpp  nmdtool.vcproj
src/septool/: .cproject  .project  CMakeLists.txt  Makefile.am  cmake_install.cmake  main.cpp  septool.vcproj
src/util/: nmd_base_to_wave.m  readblissart.m
(+50 files in other folders)
