cmake_minimum_required(VERSION 3.20)
project(openBliSSART)
add_subdirectory( LibLinAlg )
add_subdirectory( LibAudio )
add_subdirectory( LibFeature )
add_subdirectory( LibICA )
add_subdirectory( LibNMF )
add_subdirectory( LibFramework )
add_subdirectory( Testsuite )
add_subdirectory( benchmark )
add_subdirectory( browser )
add_subdirectory( septool )
add_subdirectory( icatool )
add_subdirectory( cvtool )
add_subdirectory( fextool )
add_subdirectory( cleanup )
add_subdirectory( export )
add_subdirectory( exportaudio )
